Camera Integration HARD CODED, code clean up, moved functions to UtilHelper class

--- a/Pictation/Info.plist
+++ b/Pictation/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Thank you for trusting us by sharing your image!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Thank you for trusting us by letting us use your camera!</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
